--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
+    margin: 0;
 }
 main{
     display: flex;
@@ -16,7 +17,7 @@ main{
     width: 865px;
     height: 660px;
     padding: 33px 33px 0px 33px;
-    margin-top: 21px;
+    margin-top: 48px;
     border-radius: 8px;
 }
 .container-01{
@@ -31,6 +32,54 @@ main{
 hr{
     border: 1px solid #D1D1D1;
     margin-bottom: 27px;
+}
+
+/* header style  */
+header{
+    background-color: #562EFF;
+}
+
+.header-div{
+    display: flex;
+    align-items: center;
+    width: 62%;
+    margin: 0 auto;
+    gap: 50%;
+}
+.side-element{
+    display: flex;
+    align-items: center;
+    color:#FFFFFF;
+}
+img.icon{
+    width: 40.42px;
+    height: 51px;
+}
+.icon-name{
+    width: 54px;
+    height: 36px;   
+    padding-left: 15px;
+    font-size: 24px;
+}
+header nav{
+    width: 100%;
+}
+
+header nav ul{
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+}
+header nav ul li{
+    padding: 0px 22px;
+}
+
+header nav ul li a{
+    width: 48px;
+    height: 24px;
+    text-decoration: none;
+    font-size: 16px;
+    color: #FFFFFF;
 }
 
 /* top players style  */
@@ -179,6 +228,18 @@ h3.course-title{
         width: 70%;
         height: 100%;
     }
+    header{
+        width: 120%;
+    }
+    .header-div{
+        flex-direction: column;
+    }
+    header nav ul{
+        justify-content: center;
+    }
+    header nav ul li{
+        padding: 0px 10px;
+    }
     .players, .blogs{
         grid-template-columns: repeat(1, 1fr);
     }
@@ -188,6 +249,13 @@ h3.course-title{
     .section-title{
        text-align: center;
        margin-bottom: 17px;
+    }
+    .blog{
+        display: flex;
+        gap: 1.2em;
+        align-items: center;
+        /* flex-wrap: wrap; */
+        flex-direction: column;
     }
     .courses{
         flex-direction: column;
@@ -202,8 +270,16 @@ h3.course-title{
         height: 100%;
     }
     .container-01{
-        width: 80%;
+        width: 90%;
         height: 100%;
+        margin-left: 50px;
+    }
+    header{
+        width: 120%;
+    }
+    .header-div{
+        width: 85%;
+        gap: 20%;
     }
     .players, .blogs{
         grid-template-columns: repeat(2, 1fr);
@@ -220,5 +296,6 @@ h3.course-title{
     }
     .courses{
         flex-wrap: wrap;
+        padding-left: 50px;
     }
 }
